# mini-sidekick

./: .env.example  README.md  main.py  pyproject.toml
planning/: sidekick_backlog_v3.xlsx  sidekick_jira_import.csv  sidekick_jira_import_v3.csv  ~$sidekick_backlog_v3.xlsx
src/: config.py
