[project]
name = "mini-sidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "bcrypt>=5.0.0",
    "gradio>=6.14.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "matplotlib>=3.10.9",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
]
